Posts Imasters e TI

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,15 @@
 main:
   - title: "Posts"
     url: /year-archive/
-  - title: "Categorias"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Talks"
+    url: /talks/
+  - title: "Projects"
+    url: /projects/
+  #- title: "Categorias"
+  #  url: /categories/
+  #- title: "Tags"
+  #  url: /tags/
+  
   #- title: "Pages"
   #  url: /page-archive/
   #- title: "Collections"
